# python-code-katas

./: pyproject.toml  test.ipynb
35-small-python-programs/: 03-sand-glass.py  main.ipynb
python_workout/: 0101.py  0102.py  0103.py  0104.py  0201.py  0202.py  0205.py  0207.py  0208.py  0309.py  0310.py  0311.py  0312.py  0313.py  0414.py  0415.py  0416.py  0417.py  0518.py  0519.py  0520.py  0521.py  0522.py  0523.py  0524.py  0625.py  0626.py  0627.py  0727.py  0728.py  0729.py  0730.py  0731.py  0732.py  0733.py  0734.py  0735a.py  0735b.py  0836.py  0837.py  (+8 more)
python_workout/supporting_files/: fun.txt  passwd  passwd.csv
python_workout/supporting_files/0523_scores_json/: 10a.json  10b.json  9a.json
