[tool.poetry]
name = "python-workout"
version = "0.1.0"
description = ""
authors = ["Jon Whittlestone <dev@howapped.com>"]

[tool.poetry.dependencies]
python = "^3.9"
black = "^21.5b1"
notebook = "^6.4.6"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = {version = "^21.12b0", allow-prereleases = true}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
